# speedtest-rust

./: Cargo.toml
.github/workflows/: docker-publish.yml
assets/: index.html
src/ip/mmdb/: mmdb_reader.rs  mmdb_record.rs
