[package]
name = "librespeed-rs"
version = "1.4.0"
edition = "2021"
authors = ["Sudo Dios"]
description = "Rust backend for LibreSpeed"

[features]
default = ["sqlite","mysql","postgres"]

sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql"]
postgres = ["dep:postgres"]

[dependencies]
#async net
tokio = {version = "1.49", features = ["net","io-util","rt","macros","rt-multi-thread","sync","signal"]}
tokio-rustls = {version = "0.26.4", features = ["tls12","ring"], default-features = false}
webpki-roots = "1.0.5"
rustls-pemfile = "2.2.0"
socket2 = "0.6"
listenfd = "1.0.2"
futures = "0.3.31"
#ip
maxminddb = "0.27"
#image processing
imageproc = "0.26"
ab_glyph = "0.2.32"
#serializer
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
#databases
uuid = { version = "1.20", features = ["v4"] }
chrono = "0.4.43"
mysql = { version = "27.0.0",default-features = false, optional = true }
postgres = { version = "0.19.12", optional = true }
rusqlite = { version = "0.38.0",features = ["bundled"], optional = true }
#conf
clap = { version = "4.5.55",features = ["std","color","help","usage"],default-features = false }
toml = "0.9.8"
#web
sha2 = "0.10.8"
handlebars = "6.4"
#logging
env_logger = { version = "0.11.8",default-features = false,features = ["auto-color","humantime"] }
log = "0.4.29"
indicatif = "0.18.3"
#assets
include_dir = "0.7.4"
case_insensitive_hashmap = "1.0.1"

[package.metadata.deb]
maintainer-scripts = "setup/debian/scripts/"
systemd-units = { enable = false }
revision = ""
assets = [
    ["target/release/librespeed-rs","/usr/bin/librespeed-rs","755"],
    ["assets/*","/var/lib/librespeed-rs/assets","644"],
    ["configs.toml","/var/lib/librespeed-rs/configs.toml","644"],
    ["country_asn.mmdb","/var/lib/librespeed-rs/country_asn.mmdb","644"],
    ["setup/debian/speedtest_rs.service","/lib/systemd/system/speedtest_rs.service","644"],
    ["setup/debian/speedtest_rs.socket","/lib/systemd/system/speedtest_rs.socket","644"]
]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
strip = true
